# amplifier-docs

./: .gitignore  CHANGELOG.md  discover_source_files.py  mkdocs.yaml
.amplifier/: settings.local.yaml
.beads/: beads.jsonl
.claude/: settings.local.json
.doc-gen/: config.yaml  developer-guide.md.manifest.yaml  developer-guide.md.outline.yaml
docs/: .nav.yml  DOC_SOURCE_MAPPING.csv
outlines/: docs-api-core-hooks-outline.json  docs-developer-contracts-hook-outline.json  kernel-philosophy-outline.json  regenerate_from_outlines.py
recipes/: developer-guide-sources.yaml  (+1 more)
tools/doc-gen/: .coverage  .env.example  README.md  doc-gen  pyproject.toml
tools/doc-gen/examples/: sample-outline.json
tools/doc-gen/recipes/: doc-accuracy-iterative-fixer.yaml
tools/doc-gen/src/doc_gen/: __init__.py  change_detection.py  cli.py  config.py  errors.py  generation.py  llm_client.py  metadata.py  orchestration.py  outline.py  promotion.py  prompt_logger.py  repos.py  review.py  sources.py  utils.py  validation.py
tools/doc-gen/src/doc_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/doc-gen/src/doc_gen/generate/: __init__.py  doc_generator.py  outline_models.py
tools/doc-gen/src/doc_gen/validate/: __init__.py  validator.py
tools/doc-gen/tests/: __init__.py  test_anthropic_client.py  test_change_detection.py  test_cli.py  test_config.py  test_errors.py  test_generate_outline_cmd.py  test_llm_client.py  test_metadata.py  test_orchestration.py  test_outline.py  test_promotion.py  test_repos.py  test_review.py  test_sources.py  test_validation.py  test_workflow_integration.py
(+65 files in other folders)
